added the second and third blog

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <h3 class="div">My First Website </h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis fuga impedit, modi magni culpa vero ducimus, voluptate necessitatibus alias quam consectetur consequatur deserunt exercitationem quas adipisci vitae vel quibusdam cum!</p>
     </div>
+    <div>
+        <h3 class="div">My Second Website  </h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae ducimus minus accusamus corporis error, iste hic tempora, ex a in tempore neque officia eligendi adipisci illum est consequuntur? Laboriosam, veritatis.</p>
+    </div>
+    <div>
+        <h3 class="div">My Third Website </h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam aspernatur eius culpa sed voluptate excepturi vitae odit inventore tempora vel, explicabo, ullam repellat similique totam. Cumque consequatur amet est quidem!</p>
+    </div>
     
 </body>
 </html>
