added a list to push code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h3 class="div">My Third Website </h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quisquam aspernatur eius culpa sed voluptate excepturi vitae odit inventore tempora vel, explicabo, ullam repellat similique totam. Cumque consequatur amet est quidem!</p>
     </div>
+    <div>
+        <h3 class="div">How To Push Incremental Code </h3>
+        <ul>
+            <li>git add . </li>
+            <li>git commit -m"add a meaningful commit message </li>
+            <li>git push </li>
+        </ul>
+    </div>
     
 </body>
 </html>
