boishak with jeba

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <li>git push </li>
         </ul>
     </div>
+    <div>
+        <h3>Boishaki Jeba </h3>
+        <img src="images/jeba.jpg" alt="" width="100px" height="130px">
+    </div>
     
 </body>
 </html>
